<resources>
    <string name="app_name">Pokemon</string>
    <string name="pokemon_item_iv_description">Pokemon Item Image</string>
    <string name="all_pokemon_loaded">All Pokemon Loaded</string>
    <string name="pokemondex">Pokedex</string>
    <string name="search_hint">search</string>

    <string name="about">About</string>

    <string name="base_state">Base state</string>

    <string name="moves">Moves</string>

    <string name="hp">HP</string>

    <string name="attack">Attack</string>

    <string name="defense">Defense</string>

    <string name="sp.attack">Sp. Atk</string>

    <string name="sp.def">Sp. Def</string>

    <string name="speed">Speed</string>

    <string name="total">Total</string>

    <string name="egg_groups">Egg Groups</string>

    <string name="weight">Weight</string>

    <string name="height">Height</string>

    <string name="abilities">Abilities</string>

    <string name="gender">Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breeding">Breeding</string>
    <string name="is_default">Is Default</string>
    <string name="load_more">Load More</string>

    <string name="load_more_action_text">YES</string>
    <string name="weight_unit">lbs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>