<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.pokemon_details_screen.view.pokemon_details_pages.PokemonAboutFragment">


        <TextView
            android:id="@+id/weight_tv_id"
            style="@style/about_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/abilities_tv_id"
            app:layout_constraintTop_toBottomOf="@+id/abilities_tv_id" />

        <TextView
            android:id="@+id/weight_value_id"
            style="@style/about_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/weight_tv_id"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/abilities_value_id" />

        <TextView
            android:id="@+id/height_tv_id"
            style="@style/about_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/height"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/height_value_id"
            style="@style/about_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/height_tv_id"
            app:layout_constraintStart_toEndOf="@+id/divider" />

        <TextView
            android:id="@+id/abilities_tv_id"
            style="@style/about_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abilities"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/height_tv_id"
            app:layout_constraintTop_toBottomOf="@+id/height_tv_id" />

        <TextView
            android:id="@+id/abilities_value_id"
            style="@style/about_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/abilities_tv_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/height_value_id" />

        <!--egg group fields-->

        <TextView
            android:id="@+id/is_default_tv_id"
            style="@style/about_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/is_default"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/breeding_tv"
            app:layout_constraintTop_toBottomOf="@+id/breeding_tv" />

        <TextView
            android:id="@+id/is_default_value_id"
            style="@style/about_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/is_default_tv_id"
            app:layout_constraintStart_toEndOf="@+id/divider" />

        <TextView
            android:id="@+id/egg_group_tv_id"
            style="@style/about_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egg_groups"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/is_default_tv_id"
            app:layout_constraintTop_toBottomOf="@+id/is_default_tv_id" />

        <TextView
            android:id="@+id/egg_group_value_id"
            style="@style/about_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/egg_group_tv_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/is_default_value_id" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/height_value_id" />

        <TextView
            android:id="@+id/breeding_tv"
            style="@style/headline_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/breeding"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/weight_tv_id"
            app:layout_constraintTop_toBottomOf="@+id/weight_tv_id" />

        <TextView
            android:id="@+id/about_tv_id"
            style="@style/headline_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="178dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="175dp"
            android:text="@string/about"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--end egg group fields-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>